Fix media-service Dockerfile for repo-root workspace

--- a/backend/media-service/Dockerfile
+++ b/backend/media-service/Dockerfile
@@ -15,31 +15,9 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy workspace files (context is backend directory)
+# Copy workspace files from repo root (build context is repo root)
 COPY Cargo.toml Cargo.lock ./
-COPY proto ./proto
-COPY libs ./libs
-COPY media-service ./media-service
-# Copy service deps for workspace resolution
-COPY identity-service/Cargo.toml ./identity-service/Cargo.toml
-COPY content-service/Cargo.toml ./content-service/Cargo.toml
-COPY social-service/Cargo.toml ./social-service/Cargo.toml
-COPY streaming-service/Cargo.toml ./streaming-service/Cargo.toml
-COPY notification-service/Cargo.toml ./notification-service/Cargo.toml
-COPY search-service/Cargo.toml ./search-service/Cargo.toml
-COPY analytics-service/Cargo.toml ./analytics-service/Cargo.toml
-COPY graph-service/Cargo.toml ./graph-service/Cargo.toml
-COPY feed-service/Cargo.toml ./feed-service/Cargo.toml
-COPY feature-store/Cargo.toml ./feature-store/Cargo.toml
-COPY ranking-service/Cargo.toml ./ranking-service/Cargo.toml
-COPY trust-safety-service/Cargo.toml ./trust-safety-service/Cargo.toml
-COPY graphql-gateway/Cargo.toml ./graphql-gateway/Cargo.toml
-
-# Create stub lib.rs for workspace members we don't need to build
-RUN for dir in identity-service content-service social-service streaming-service notification-service search-service analytics-service graph-service feed-service feature-store ranking-service trust-safety-service graphql-gateway; do \
-    mkdir -p $dir/src && echo "" > $dir/src/lib.rs; \
-    done && \
-    mkdir -p content-service/benches && echo "fn main() {}" > content-service/benches/feed_ranking_bench.rs
+COPY backend ./backend
 
 # Downgrade home crate to version compatible with Rust 1.85
 RUN cargo update -p home --precise 0.5.9
