ci: free disk space before backend tests to fix 'No space left on device'

--- a/.github/workflows/backend-workspace-tests.yml
+++ b/.github/workflows/backend-workspace-tests.yml
@@ -28,6 +28,15 @@ jobs:
     timeout-minutes: 60
 
     steps:
+      - name: Free disk space
+        run: |
+          # Remove unnecessary tools and libraries to free disk space
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          df -h
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
