fix(feature-store): use APP_ENV for mTLS check instead of debug_assertions
- Changed mTLS requirement check from cfg!(debug_assertions) to APP_ENV != production
- This allows release builds to run without TLS in development/staging environments
- Updated K8s deployment with correct Artifact Registry image path

--- a/backend/k8s/base/feature-store.yaml
+++ b/backend/k8s/base/feature-store.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: feature-store
-        image: nova-feature-store:latest
+        image: asia-northeast1-docker.pkg.dev/banded-pad-479802-k9/nova/feature-store:latest
         imagePullPolicy: Always
         ports:
         - name: http
