fix(k8s): update KAFKA_BROKERS to use cross-namespace DNS
- Changed kafka:9092 to kafka.nova-staging.svc.cluster.local:9092
- Fixes Kafka connection from nova-backend services to nova-staging Kafka

--- a/backend/k8s/base/configmap.yaml
+++ b/backend/k8s/base/configmap.yaml
@@ -129,7 +129,7 @@ data:
   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/nova"
   REDIS_URL: "redis://redis:6379"
   CLICKHOUSE_URL: "http://clickhouse:8123"
-  KAFKA_BROKERS: "kafka:9092"
+  KAFKA_BROKERS: "kafka.nova-staging.svc.cluster.local:9092"
   ELASTICSEARCH_URL: "http://elasticsearch:9200"
 
   # GCS (Google Cloud Storage) - for media storage
