--- a/k8s/microservices/realtime-chat-service-configmap.yaml
+++ b/k8s/microservices/realtime-chat-service-configmap.yaml
@@ -30,8 +30,8 @@ data:
   MATRIX_SERVER_NAME: "staging.gcp.icered.com"
   MATRIX_SERVICE_USER: "@nova-service:staging.gcp.icered.com"
   MATRIX_DEVICE_NAME: "nova-realtime-chat-service"
-  # Matrix-first: do not persist/broadcast Matrix ingress via Nova DB/WebSocket
-  MATRIX_FIRST: "true"
+  # Persist Matrix ingress to Nova DB (metadata-only) for platform integration.
+  MATRIX_FIRST: "false"
   # Kafka for identity event sync
   KAFKA_ENABLED: "true"
   KAFKA_BROKERS: "kafka.nova-staging.svc.cluster.local:9092"
