--- a/k8s/infrastructure/overlays/staging/kustomization.yaml
+++ b/k8s/infrastructure/overlays/staging/kustomization.yaml
@@ -225,24 +225,31 @@ patches:
           image: postgres:15-alpine
           imagePullPolicy: IfNotPresent
           env:
-            - name: DATABASE_URL
+            - name: DB_USER
               valueFrom:
                 secretKeyRef:
                   name: nova-db-credentials
-                  key: realtime-chat-db-url
+                  key: DB_USER
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: nova-db-credentials
+                  key: DB_PASSWORD
+            - name: DB_NAME
+              value: nova_realtime_chat
           command: ["/bin/sh", "-c"]
           args:
             - |
               set -euo pipefail
               echo "🛠️  Ensuring ux_messages_matrix_event_id exists..."
               for i in $(seq 1 60); do
-                if pg_isready -d "$DATABASE_URL" >/dev/null 2>&1; then
+                if PGPASSWORD="$DB_PASSWORD" pg_isready -h postgres -p 5432 -U "$DB_USER" -d "$DB_NAME" >/dev/null 2>&1; then
                   break
                 fi
                 echo "waiting for postgres..."
                 sleep 2
               done
-              psql "$DATABASE_URL" -v ON_ERROR_STOP=1 -c "CREATE UNIQUE INDEX IF NOT EXISTS ux_messages_matrix_event_id ON messages(matrix_event_id) WHERE matrix_event_id IS NOT NULL;"
+              PGPASSWORD="$DB_PASSWORD" psql -h postgres -p 5432 -U "$DB_USER" -d "$DB_NAME" -v ON_ERROR_STOP=1 -c "CREATE UNIQUE INDEX IF NOT EXISTS ux_messages_matrix_event_id ON messages(matrix_event_id) WHERE matrix_event_id IS NOT NULL;"
               echo "✓ realtime-chat DB index ensured"
   target:
     group: apps
