Matrix-first messaging hardening
- Group info: member profile + edit name/avatar

- Delete semantics: forget/permanent hide + rejoin handling

- Matrix event bus: multi-subscriber callbacks

- Remove WS-first chat routes/docs

--- a/k8s/staging/graphql-gateway-ingress-elb.yaml
+++ b/k8s/staging/graphql-gateway-ingress-elb.yaml
@@ -23,9 +23,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
-    # Enable WebSocket upgrade for both GraphQL subscriptions (/ws)
-    # and realtime-chat-service alias (/ws/chat)
-    nginx.ingress.kubernetes.io/websocket-services: "graphql-gateway,realtime-chat-service"
+    # Enable WebSocket upgrade for GraphQL subscriptions (/ws)
+    nginx.ingress.kubernetes.io/websocket-services: "graphql-gateway"
 spec:
   ingressClassName: nginx
   rules:
@@ -89,11 +88,4 @@ spec:
             port:
               number: 8080
         path: /ws
-        pathType: Prefix
-      - backend:
-          service:
-            name: realtime-chat-service
-            port:
-              number: 8080
-        path: /ws/chat
         pathType: Prefix
