--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -591,58 +591,12 @@ server {
     }
 
     # ============================================
-    # WebSocket Endpoints (messaging-service)
+    # WebSocket Endpoints (Deprecated)
     # ============================================
-
-    # Legacy WebSocket endpoint (kept for backward compatibility)
-    location /ws/messaging/ {
-        proxy_pass http://messaging_service;
-        proxy_http_version 1.1;
-
-        # WebSocket upgrade headers
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # WebSocket timeouts
-        proxy_read_timeout 86400s;
-        proxy_send_timeout 86400s;
-    }
-
-    # Standard WebSocket endpoint via API Gateway (/api/v1/ws)
-    location ~ ^/api/v1/ws {
-        limit_req zone=api_limit burst=50 nodelay;
-
-        # JWT 验证 - WebSocket连接需要认证
-        if ($http_authorization = "") {
-            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
-        }
-
-        proxy_pass http://messaging_service;
-        proxy_http_version 1.1;
-
-        # WebSocket upgrade headers
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Request-ID $request_id;
-        proxy_set_header Authorization $http_authorization;
-
-        # WebSocket timeouts (1 hour)
-        proxy_read_timeout 3600s;
-        proxy_send_timeout 3600s;
-
-        # Disable buffering for WebSocket
-        proxy_buffering off;
-    }
+    #
+    # Nova chat is Matrix-first (Synapse + Matrix Rust SDK). The API Gateway no longer
+    # exposes chat WebSocket endpoints via nginx. Keep GraphQL subscriptions under
+    # graphql-gateway if needed.
 
     # ============================================
     # OpenAPI / Swagger Documentation
