--- a/ios/NovaSocial/ICERED.entitlements
+++ b/ios/NovaSocial/ICERED.entitlements
@@ -8,8 +8,8 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>webcredentials:staging.gcp.icered.com?mode=developer</string>
-		<string>webcredentials:aasa.icered.com?mode=developer</string>
+		<string>webcredentials:staging.gcp.icered.com</string>
+		<string>webcredentials:aasa.icered.com</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
