fix(ci): correct Docker build context to ./backend
The Docker build context was set to '.' (repo root) but the Dockerfiles
expect the context to be './backend'. This caused proto file compilation
failures because build.rs couldn't find the proto files at the expected
relative path '../proto/services/auth_service.proto'.

Changed context from '.' to './backend' to match Dockerfile expectations.

--- a/.github/workflows/ecr-build-push.yml
+++ b/.github/workflows/ecr-build-push.yml
@@ -101,7 +101,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./backend
           file: ./backend/${{ matrix.service }}/Dockerfile
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
