fix(ci): standardize identity-service Dockerfile to match other services
- Revert context change in workflow (keep as repo root)
- Update identity-service Dockerfile to use 'COPY backend ./backend' pattern
- Change WORKDIR to /app/backend for consistent workspace build
- Update binary path in COPY --from=builder to match new build location

This aligns identity-service with the Dockerfile pattern used by all other
services (graph-service, media-service, etc.) and fixes the proto file
compilation issue.

--- a/backend/identity-service/Dockerfile
+++ b/backend/identity-service/Dockerfile
@@ -14,8 +14,11 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy entire backend workspace (context is ./backend)
-COPY . .
+# Copy backend workspace files (build context is repo root)
+COPY backend ./backend
+
+# Change to backend directory for workspace build
+WORKDIR /app/backend
 
 # Build identity-service
 RUN cargo build --release -p identity-service --bin identity-service
@@ -36,7 +39,7 @@ RUN useradd -m -u 1001 -s /bin/bash appuser
 WORKDIR /app
 
 # Copy binary
-COPY --from=builder /app/target/release/identity-service /app/identity-service
+COPY --from=builder /app/backend/target/release/identity-service /app/identity-service
 
 # Adjust ownership
 RUN chown -R appuser:appuser /app
