fix(ci): update integration tests to use identity-service instead of auth-service
- Changed test path from backend/auth-service to backend/identity-service
- Updated test file name from grpc_integration_tests to grpc_identity_service_test
- This fixes CI failures caused by the auth-service -> identity-service rename

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -93,9 +93,9 @@ jobs:
           echo "Redis failed to become ready"
           exit 1
 
-      - name: Run integration tests for auth-service
+      - name: Run integration tests for identity-service
         timeout-minutes: 10
-        run: cargo test --manifest-path backend/auth-service/Cargo.toml --test grpc_integration_tests -- --nocapture --test-threads=1
+        run: cargo test --manifest-path backend/identity-service/Cargo.toml --test grpc_identity_service_test -- --nocapture --test-threads=1
         env:
           DATABASE_URL: postgresql://nova:nova_password@localhost:5432/postgres
           REDIS_URL: redis://localhost:6379
