fix(k8s): skip migrations in identity-service pods
When using PgBouncer, migrations must be run directly against PostgreSQL,
not through PgBouncer. This change skips migrations in the main pods.

Migrations should be run via:
1. A Kubernetes Job with direct PostgreSQL connection
2. Or manually before deployment

This prevents 'prepared statement already exists' errors that occur when
multiple pods try to run migrations through PgBouncer simultaneously.

--- a/k8s/microservices/identity-service-deployment.yaml
+++ b/k8s/microservices/identity-service-deployment.yaml
@@ -60,6 +60,8 @@ spec:
 
         # Environment variables
         env:
+        - name: SKIP_MIGRATIONS
+          value: "true"
         - name: RUST_LOG
           value: "info,identity_service=debug"
         - name: APP_ENV
